--- a/app/src/main/res/values-fil/strings.xml
+++ b/app/src/main/res/values-fil/strings.xml
@@ -107,7 +107,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="due_date">Nakatakdang petsa</string>
     <string name="current_date">Petsa ngayon</string>
     <string name="archive">Naka-archive</string>
-    <string name="add_task">Magdagdag ng gawain</string>
+    <string name="add_todo">Magdagdag ng gawain</string>
     <string name="add_x_witharg">Idagdag ang %s</string>
     <string name="document_to_be_loaded_and_saved_as_witharg">Dokumentong ilo-load at ise-save bilang \"%s\"</string>
     <string name="refresh">I-refresh</string>
@@ -145,8 +145,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="break_page_pdf_print">I-break ang pahina (PDF/Pagpi-print)</string>
     <string name="underline_hex_color_wether_or_not_to_description__appspecific">Kung sasalungguhitan ba ang mga hex color code ayon sa kulay</string>
     <string name="underline_hex_color_codes">Salungguhitan ang mga Hex Color Code</string>
-    <string name="insert_current_date_when_starting_new_task">Isingit ang petsa ngayon kapag gagawa ng bagong gawain</string>
-    <string name="tasks_with_todays_date">Mga Gawain na may petsa ngayon</string>
+    <string name="insert_current_date_when_starting_new_todo">Isingit ang petsa ngayon kapag gagawa ng bagong gawain</string>
+    <string name="todos_with_todays_date">Mga Gawain na may petsa ngayon</string>
     <string name="append_contexts_and_projects">Isama ang mga konteksto at proyekto</string>
     <string name="rtl_rendering">Pagre-render ng RTL</string>
     <string name="highlight_line_ending">I-highlight ang dulo ng linya</string>
@@ -157,8 +157,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="resources">Mga Mapagkukunan</string>
     <string name="space_between_lines_in_percent">Porsyento ng espasyo sa pagitan ng mga linya</string>
     <string name="line_spacing">Espasyo ng Linya</string>
-    <string name="archive_does_move_done_tasks">Ilipat ang mga natapos na gawain sa tinukoy na file sa parehong folder</string>
-    <string name="sort_tasks_by_selected_order">Ayusin ang mga gawain sa piniling ayos</string>
+    <string name="archive_does_move_done_todo">Ilipat ang mga natapos na gawain sa tinukoy na file sa parehong folder</string>
+    <string name="sort_todos_by_selected_order">Ayusin ang mga gawain sa piniling ayos</string>
     <string name="special_key">Espesyal na Key</string>
     <string name="key_page_up">Pahina Pataas (Page Up)</string>
     <string name="key_page_down">Pahina Pababa (Page Down)</string>
