--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -110,7 +110,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="due_date">Eräpäivä</string>
     <string name="current_date">Nykyinen päivämäärä</string>
     <string name="archive">Arkistoi</string>
-    <string name="add_task">Lisää tehtävä</string>
+    <string name="add_todo">Lisää tehtävä</string>
     <string name="add_x_witharg">Lisää %s</string>
     <string name="document_to_be_loaded_and_saved_as_witharg">Ladattava ja tallennettava asiakirja nimellä \"%s\"</string>
     <string name="refresh">Päivitä</string>
@@ -153,10 +153,10 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="underline">Alleviivaus</string>
     <string name="underline_hex_color_wether_or_not_to_description__appspecific">Alleviivataanko heksavärikoodeja värin mukaan</string>
     <string name="underline_hex_color_codes">Alleviivaa heksavärikoodit</string>
-    <string name="insert_current_date_when_starting_new_task">Lisää nykyinen päivämäärä, kun uusi tehtävä aloitetaan</string>
-    <string name="tasks_with_todays_date">Tehtävät tämän päivän päivämäärällä</string>
+    <string name="insert_current_date_when_starting_new_todo">Lisää nykyinen päivämäärä, kun uusi tehtävä aloitetaan</string>
+    <string name="todos_with_todays_date">Tehtävät tämän päivän päivämäärällä</string>
     <string name="append_contexts_and_projects">Lisää asiayhteydet ja projektit</string>
-    <string name="append_contexts_and_projects_on_end_of_task">Lisää asiayhteydet ja projektit tehtävän loppuun, kun käytät asianmukaista tekstitoimintoa</string>
+    <string name="append_contexts_and_projects_on_end_of_todo">Lisää asiayhteydet ja projektit tehtävän loppuun, kun käytät asianmukaista tekstitoimintoa</string>
     <string name="rtl_rendering">RTL-hahmonnus</string>
     <string name="highlight_line_ending">Korosta rivin loppu</string>
     <string name="highlight_line_ending_if_two_or_more_spaces">Korosta kahden tai useamman välilyönnin sisältävien rivien loput</string>
@@ -169,8 +169,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="resources">Resurssit</string>
     <string name="space_between_lines_in_percent">Rivien välinen tila prosentteina</string>
     <string name="line_spacing">Riviväli</string>
-    <string name="archive_does_move_done_tasks">Siirrä tehdyt tehtävät samassa kansiossa olevaan määritettyyn tiedostoon</string>
-    <string name="sort_tasks_by_selected_order">Lajittele tehtävät valitun järjestyksen mukaan</string>
+    <string name="archive_does_move_done_todo">Siirrä tehdyt tehtävät samassa kansiossa olevaan määritettyyn tiedostoon</string>
+    <string name="sort_todos_by_selected_order">Lajittele tehtävät valitun järjestyksen mukaan</string>
     <string name="special_key">Erikoisnäppäin</string>
     <string name="key_page_up">Sivu ylös (Page Up)</string>
     <string name="key_page_down">Sivu alas (Page down)</string>
@@ -355,7 +355,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="link_color">Linkin väri</string>
     <string name="add_context">Lisää konteksti</string>
     <string name="add_project">Lisää projekti</string>
-    <string name="archive_completed_tasks">Arkistoi suoritetut tehtävät</string>
+    <string name="archive_completed_todos">Arkistoi suoritetut tehtävät</string>
     <string name="sort_alphabetically">Lajittele aakkosjärjestyksessä</string>
     <string name="create_new_file_or_folder">Luo uusi tiedosto tai kansio</string>
     <string name="choose_format">Valitse muoto</string>
@@ -363,7 +363,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="back">Takaisin</string>
     <string name="expand_collapse">Laajenna / Tiivistä</string>
     <string name="essential">Olennainen</string>
-    <string name="append_human_readable_uuid_to_new_tasks">Lisää ihmisen luettavissa oleva UUID uusiin tehtäviin</string>
+    <string name="append_human_readable_uuid_to_new_todos">Lisää ihmisen luettavissa oleva UUID uusiin tehtäviin</string>
     <string name="action_order">Toiminnon järjestys</string>
     <string name="toggle_action_visibility">Vaihda toiminnan näkyvyyttä</string>
     <string name="load_default_settings">Lataa oletusasetukset</string>
