--- a/app/src/main/res/values-mk/strings.xml
+++ b/app/src/main/res/values-mk/strings.xml
@@ -106,7 +106,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="due_date">Доставна дата</string>
     <string name="current_date">Сегашна дата</string>
     <string name="archive">Архивирај</string>
-    <string name="add_task">Додади задача</string>
+    <string name="add_todo">Додади задача</string>
     <string name="add_x_witharg">Додади %s</string>
     <string name="refresh">Освежи</string>
     <string name="create_shortcut">Креирај кратенка</string>
@@ -129,7 +129,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="none">Ниедно</string>
     <string name="other">Друго</string>
     <string name="empty_file">Празен фајл</string>
-    <string name="tasks_with_todays_date">Задачи со денешен датум</string>
+    <string name="todos_with_todays_date">Задачи со денешен датум</string>
     <string name="general">Општо</string>
     <string name="resources">Ресурси</string>
 </resources>
