--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -110,7 +110,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="due_date">Termin</string>
     <string name="current_date">Aktualna data</string>
     <string name="archive">Archiwum</string>
-    <string name="add_task">Dodaj zadanie</string>
+    <string name="add_todo">Dodaj zadanie</string>
     <string name="add_x_witharg">Dodaj %s</string>
     <string name="document_to_be_loaded_and_saved_as_witharg">Dokument zostanie załadowany i zapisany jako \"%s\"</string>
     <string name="refresh">Odśwież</string>
@@ -153,10 +153,10 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="underline">Podkreślenie</string>
     <string name="underline_hex_color_wether_or_not_to_description__appspecific">Określa, czy należy podświetlać kody kolorów heksadecymalnych w zależności od koloru</string>
     <string name="underline_hex_color_codes">Podkreślaj kolory w układzie szesnastkowym (Hex)</string>
-    <string name="insert_current_date_when_starting_new_task">Wstawianie bieżącej daty podczas uruchamiania nowego zadania</string>
-    <string name="tasks_with_todays_date">Zadania z dzisiejszą datą</string>
+    <string name="insert_current_date_when_starting_new_todo">Wstawianie bieżącej daty podczas uruchamiania nowego zadania</string>
+    <string name="todos_with_todays_date">Zadania z dzisiejszą datą</string>
     <string name="append_contexts_and_projects">Dodaj konteksty i projekty</string>
-    <string name="append_contexts_and_projects_on_end_of_task">Dołącz kontekst i projekty na końcu zadania przy użyciu odpowiedniej akcji tekstowej</string>
+    <string name="append_contexts_and_projects_on_end_of_todo">Dołącz kontekst i projekty na końcu zadania przy użyciu odpowiedniej akcji tekstowej</string>
     <string name="rtl_rendering">Renderowanie RTL</string>
     <string name="highlight_line_ending">Podświetl zakończenie linii</string>
     <string name="highlight_line_ending_if_two_or_more_spaces">Podświetlaj spacje na końcu lini zawierające dwie lub więcej spacji</string>
@@ -169,8 +169,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="resources">Zasoby</string>
     <string name="space_between_lines_in_percent">Odstęp między wierszami w procentach</string>
     <string name="line_spacing">Odstępy między wierszami</string>
-    <string name="archive_does_move_done_tasks">Przenieś wykonane zadania do określonego pliku w tym samym folderze</string>
-    <string name="sort_tasks_by_selected_order">Sortuj zadania według wybranej kolejności</string>
+    <string name="archive_does_move_done_todo">Przenieś wykonane zadania do określonego pliku w tym samym folderze</string>
+    <string name="sort_todos_by_selected_order">Sortuj zadania według wybranej kolejności</string>
     <string name="special_key">Specialne Klawisze</string>
     <string name="key_page_up">Strona w górę (Page Up)</string>
     <string name="key_page_down">Strona w dół (Page Down)</string>
@@ -355,7 +355,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="link_color">Kolor linku</string>
     <string name="add_context">Dodaj kontekst</string>
     <string name="add_project">Dodaj projekt</string>
-    <string name="archive_completed_tasks">Archiwizuj zakończone zadania</string>
+    <string name="archive_completed_todos">Archiwizuj zakończone zadania</string>
     <string name="sort_alphabetically">Sortuj alfabetycznie</string>
     <string name="create_new_file_or_folder">Utwórz nowy plik lub folder</string>
     <string name="choose_format">Wybierz format</string>
@@ -363,7 +363,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="back">Powrót</string>
     <string name="expand_collapse">Rozwiń / Zwiń</string>
     <string name="essential">Zasadnicze</string>
-    <string name="append_human_readable_uuid_to_new_tasks">Dołącz czytelny dla człowieka UUID do nowych zadań</string>
+    <string name="append_human_readable_uuid_to_new_todos">Dołącz czytelny dla człowieka UUID do nowych zadań</string>
     <string name="action_order">Kolejność działań</string>
     <string name="toggle_action_visibility">Przełącz widoczność akcji</string>
     <string name="load_default_settings">Załaduj domyślne ustawienia</string>
