--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -81,7 +81,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="exit">Thoát</string>
     <string name="more">Thêm</string>
     <string name="help">Trợ giúp</string>
-    <string name="add_task">Thêm tác vụ</string>
+    <string name="add_todo">Thêm tác vụ</string>
     <string name="add_x_witharg">Thêm %s</string>
     <string name="document_to_be_loaded_and_saved_as_witharg">Tài liệu được tải và lưu dưới dạng \"%s\"</string>
     <string name="refresh">Làm mới</string>
